Fixed bug on counting invalid tests + improved Defects4j output statistics